[package]
authors = ["Chorus One <techops@chorus.one>"]
license = "GPL-3.0"
edition = "2018"
name = "inner-swap"
version = "0.0.1"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.9.28"
spl-token-swap = { version = "2.1.0", features = ["no-entrypoint"] }
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
borsh = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
