[package]
name = "token-swap-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spl-token-swap = "2.1.0"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
bincode = "1.3.3"
solana-client = "=1.10.38" 
solana-sdk = "=1.10.38" 
solana-program = "=1.10.38"
clap = { version = "3.2.17", features = ["derive"] }
serde = "1.0.144"
serde_json = "1.0.85"
inner-swap = { path = "../inner-swap-program" }
